config-05/k8s/deployment/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: server
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: server
