config-05/k8s/deployment/netpol-allow-server-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-server
  namespace: colombostips
spec:
  podSelector:
    matchLabels:
      app: server
  ingress:
  - {}
